Storage and DOM added in the files

--- a/index.html
+++ b/index.html
@@ -1,13 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
-    
+
+    <!-- <h1 id="h1">This is heading 1</h1>
+    <h2>This is heading</h2>
+
+    <p id="para">I am paragraph</p>
+    <p class="para1">This is paragraph1</p>
+    <p class="para1">This is paragraph2</p>
+
+    <p id="pid">I am paragrap2</p>
+    <p class="pcls">This is paragraph3</p>
+    <h3>This is heading</h3> -->
+
+    <!-- <a href="#">Home</a>
+    <ul>
+        <li><a href="#">List item 1</a></li>
+        <li>List item 2</li>
+    </ul>
+
+    <div class="myDiv">
+        <a href="#">Div content</a>
+    </div> -->
+
+    <!-- Button Click -->
+    <!-- <button onclick="showMessage()">Click me</button>
+    <button onclick="surprise()">Click me to get surprised</button>
+    <p id="salam">want to see the something?</p>
+
+    <button onclick="showImage()">Click me to see something</button>
+    <img src="#" id="imgID" alt=""> -->
+
+    <div id="myDiv" style="background-color: blanchedalmond;">
+        <h1>Hello</h1>
+        <h2>Welcome</h2>
+    </div>
+
+
     <script src="index.js"></script>
 </body>
+
 </html>
